--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -25,14 +25,13 @@
 
         </ul>
         <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a href="{% url 'webapp:basket' %}" class="nav-link">Корзина ({{ request.session.products_count|default:0 }})</a></li>
             {% if request.user.is_authenticated %}
                 <li class="nav-item"><a href="" class="nav-link">
                     Привет, {{ request.user.username }}!
                 </a></li>
-                <li class="nav-item"><a href="{% url 'accounts:logout' %}" class="nav-link">Выход</a></li>
+                <li class="nav-item"><a href="{% url 'webapp:logout' %}" class="nav-link">Выход</a></li>
             {% else %}
-                <li class="nav-item"><a href="{% url 'accounts:login' %}" class="nav-link">Вход</a></li>
+                <li class="nav-item"><a href="{% url 'webapp:login' %}" class="nav-link">Вход</a></li>
             {% endif %}
         </ul>
     </div>
