--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,4 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Index page</h1>
+    <h1 class="text-center">Все фото наших пользователей</h1>
+    {% for photo in photos %}
+        <div class="row">
+        <div class="col-4">
+            <img src="{{ photo.img.url }}" alt="" height="250" width="250">
+        </div>
+        <div class="col-8">
+            <p>Автор: {{ photo.author.username }}</p>
+            <p>Подпись: {{ photo.signature }}</p>
+            <p>Рейтинг: {{ photo.likes }}</p>
+            <p>Дата создания: {{ photo.created_at|date:"Y-m-d H:i:s" }}</p>
+        </div>
+        </div>
+    {% endfor %}
 {% endblock %}
