--- a/source/webapp/templates/update.html
+++ b/source/webapp/templates/update.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <h1>Изменение {{ title }}</h1>
-     <form method="POST">
+     <form method="POST"  enctype="multipart/form-data">
     {% include 'partial/form.html' with button_text='Изменить'%}
     </form>
 {% endblock %}
