--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -43,7 +43,7 @@
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/client.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
